Registration added to API and routes
